[package]
name = "azure-app-configuration"
version = "0.1.0"
authors = ["clanderas"]
edition = "2018"
license = "Apache-2.0/MIT"
repository = "https://github.com/CarlosLanderas/azure-app-configuration"
homepage = "https://github.com/CarlosLanderas/azure-app-configuration"
documentation = "https://docs.rs/azure-app-configuration"
description = "Azure App Configuration client for Rust"
keywords = ["azure", "app-configuration", "cloud", "api-wrapper", "client"]
categories = ["api-bindings", "config"]
readme = "README.md"

[dependencies]
surf = "2.3"
http = "0.2"
sha2 = "0.10"
base64 = "0.13"
url = "2.1"
async-std = "1.12"
httpdate = "1"
serde = "1"
serde_derive = "1"
serde_json = "1"
log = "0.4"
ring = "0.16"

[[example]]
name = "list-key-values"
path = "examples/list_key_values.rs"
[[example]]
name = "list-labels"
path = "examples/list_labels.rs"
[[example]]
name = "list-keys"
path = "examples/list_keys.rs"
[[example]]
name = "get-key-value"
path = "examples/get_key_value.rs"
[[example]]
name = "set-key-value"
path = "examples/set_key_value.rs"
[[example]]
name = "set-key-value-with-tags"
path = "examples/set_key_value_with_tags.rs"
[[example]]
name = "remove-key-value"
path = "examples/remove_key_value.rs"